@@ -1,3 +1,9 @@
+2010-08-18 Adam Moody <moody20@llnl.gov>
+
+	* makefile,
+	  src/pmgr_collective_client.c : Added HAVE_PMI ifdef flag to conditionally
+	  compile with PMI calls.
+
 2010-08-17 Adam Moody <moody20@llnl.gov>
 
 	* src/pmgr_collective_client.c : Fixed bug in pmgr_scatter_tree.  Changed
